--- a/documentation/.bonus.md
+++ b/documentation/.bonus.md
@@ -1,6 +1,6 @@
 # Token Extensions Multisig Tokenizer - Code Summary
 
-## **Section 1: Imports & Setup** (Lines 1-10)
+## **Section 1: Imports & Setup**
 - **Purpose**: Initialize Token Extensions libraries and utilities
 - **What it does**:
   - Imports Token2022 program ID and SPL Token Extensions functions
@@ -9,7 +9,7 @@
 
 ---
 
-## **Section 2: Client Class Construction** (Lines 12-22)
+## **Section 2: Client Class Construction**
 - **Purpose**: Initialize multisig client with Anchor framework
 - **What it does**:
   - Creates Anchor provider and sets environment
@@ -18,7 +18,7 @@
 
 ---
 
-## **Section 3: Wallet Management** (Lines 24-35)
+## **Section 3: Wallet Management**
 - **Purpose**: List and display available Solana Playground wallets
 - **What it does**:
   - Shows all 3 playground wallet addresses
@@ -27,7 +27,7 @@
 
 ---
 
-## **Section 4: Multisig Validation** (Lines 37-80)
+## **Section 4: Multisig Validation**
 - **Purpose**: Check existing multisig accounts and wallet compatibility
 - **What it does**:
   ### 4.1 Account Discovery
@@ -42,7 +42,7 @@
 
 ---
 
-## **Section 5: Core Multisig Creation** (Lines 82-150)
+## **Section 5: Core Multisig Creation**
 - **Purpose**: Create or reuse multisig account with Token Extensions
 - **What it does**:
   ### 5.1 Wallet Preparation
@@ -57,7 +57,7 @@
 
 ---
 
-## **Section 6: Token Extensions Mint Creation** (Lines 152-180)
+## **Section 6: Token Extensions Mint Creation**
 - **Purpose**: Create Token Extensions mint with metadata support
 - **What it does**:
   - Derives mint PDA from multisig account
@@ -67,7 +67,7 @@
 
 ---
 
-## **Section 7: Associated Token Account Setup** (Lines 182-210)
+## **Section 7: Associated Token Account Setup**
 - **Purpose**: Create standardized token accounts
 - **What it does**:
   - Derives ATA address using Token Extensions program
@@ -77,7 +77,7 @@
 
 ---
 
-## **Section 8: Comprehensive Multisig Testing** (Lines 275-390)
+## **Section 8: Comprehensive Multisig Testing**
 - **Purpose**: Demonstrate and validate multisig functionality
 - **What it does**:
   ### 8.1 Successful Cases
@@ -95,7 +95,7 @@
 
 ---
 
-## **Section 9: Results & Summary** (Lines 392-420)
+## **Section 9: Results & Summary**
 - **Purpose**: Display comprehensive operation results
 - **What it does**:
   - Shows all created account addresses (multisig, mint, token account)
@@ -144,7 +144,6 @@
 ### **Security Model**
 - 3 authorized signers (Playground wallets)
 - Minimum 2 signatures required for operations
-- Nonce-based replay attack prevention
 
 ### **Token Extensions Features**
 - Metadata pointer extension for native metadata
